objects/Recommendation.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <label>Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Targeted_Audience__c</fullName>
        <inlineHelpText>Who should this recommendation target?</inlineHelpText>
        <label>Targeted Audience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Recommendation_Audience</valueSetName>
        </valueSet>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>